--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/currency_converter/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/currency_converter/assets/index.a5f9e4ab.js"></script>
-    <link rel="stylesheet" href="/currency_converter/assets/index.03f1660a.css">
+    <script
+      type="module"
+      crossorigin
+      src="/currency_converter/assets/index.8544f159.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="/currency_converter/assets/index.4caa1557.css"
+    />
   </head>
   <body>
     <div id="root"></div>
-    
   </body>
 </html>
